src/assets/main.css
@import './base.css';
html {
  overflow: hidden;
}
body {
  font-family: 'Plus Jakarta Sans', sans-serif;
  color: #000;
  background-color: theme('colors.light-theme-bg');
  overflow: auto;
}
/* dark theme */
html.dark body {
  background-color: theme('colors.dark');
  color: #fff;
}

.beautify-scrollbar::-webkit-scrollbar {
  width: 12px;
  height: 12px;
  background-color: theme('colors.slate.300');
}
html.dark .beautify-scrollbar::-webkit-scrollbar {
  background-color: theme('colors.zinc.900');
}

.beautify-scrollbar::-webkit-scrollbar-thumb {
  width: 12px;
  background-color: theme('colors.slate.400');
  border-radius: 100px;
}
html.dark .beautify-scrollbar::-webkit-scrollbar-thumb {
  background-color: theme('colors.zinc.700');
}
.beautify-scrollbar::-webkit-scrollbar-corner {
  background-color: theme('colors.slate.300');
}
html.dark .beautify-scrollbar::-webkit-scrollbar-corner {
  background-color: theme('colors.zinc.900');
}
button:focus-visible {
  outline: 2px solid theme('colors.orange.400');
}

